quickstart/multirepo/root/asm_rules/canary-release-vets-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vets-service-destination
  namespace: default
spec:
  host: vets-service 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
