quickstart/multirepo/root/asm_rules/mtls-visits-service-dr.yaml
#Any call to visits-service will happen with tls.mode applied
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: visits-service-istio-mtls
spec:
  host: visits-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
