quickstart/multirepo/root/asm_rules/timout-vets-service-dr.yaml
#the following rule sets a limit of 100 connections to vets-service with a connect timeout of 30ms
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vets-service-timeout-rule-dr
spec:
  host: vets-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
