quickstart/multirepo/root/asm_rules/timout-vets-service-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vets-service-timeout-rule-vs
spec:
  hosts:
  - vets-service
  http:
  - timeout: 5s
    route:
    - destination:
        host: vets-service
